add description of configs parameters and examples of training on custom data

--- a/docs/features/models/ODQA.ipynb
+++ b/docs/features/models/ODQA.ipynb
@@ -21,11 +21,15 @@
     "\n",
     "4. [Use the model for prediction](#4.-Use-the-model-for-prediction)\n",
     "\n",
-    "    4.1. [Predict using Python](#4.1-Predict-using-Python)\n",
+    "    4.1 [Predict using Python](#4.1-Predict-using-Python)\n",
     "\n",
-    "    4.2. [Predict using CLI](#4.2-Predict-using-CLI)\n",
+    "    4.2 [Predict using CLI](#4.2-Predict-using-CLI)\n",
     "\n",
-    "5. [Customize the model](#4.-Customize-the-model)"
+    "5. [Customize the model](#5.-Customize-the-model)\n",
+    "\n",
+    "    5.1 [Description of config parameters](#5.1-Description-of-config-parameters)\n",
+    "    \n",
+    "    5.2 [Building the index and training the reader model](#5.2-Building-the-index-and-training-the-reader-model)"
    ]
   },
   {
@@ -272,6 +276,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 5.1 Description of config parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parameters of ``bpr`` component:\n",
+    "    \n",
+    "- ``load_path`` - path with checkpoint of query encoder and bpr index;\n",
+    "- ``query_encoder_file`` - filename of query encoder (Transformer-based model which takes a question as input and obtains its binary embedding);\n",
+    "- ``bpr_index`` - filename with BPR index (matrix of paragraph binary vectors);\n",
+    "- ``pretrained_model`` - Transformer model, used in query encoder;\n",
+    "- ``max_query_length`` - maximal length (in sub-tokens) of the input to the query encoder;\n",
+    "- ``top_n`` - how many paragraph IDs to return per a question."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parameters of ``tfidf_ranker`` component:\n",
+    "\n",
+    "- ``top_n`` - how many paragraph IDs to return per a question."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parameters of ``logit_ranker`` component:\n",
+    "\n",
+    "- ``batch_size`` - the paragraphs from the database (some of which contain the answer to the question, others - do not contain) will be split into batches with the size ``batch_size`` for extraction of candidate answer in each paragraph;\n",
+    "- ``squad_model`` - the model which finds spans of an answer in a paragraph;\n",
+    "- ``sort_noans`` - whether to put paragraphs with no answer in the end of paragraph list, sorted by confidences;\n",
+    "- ``top_n`` - the number of possible answers for a question;\n",
+    "- ``return_answer_sentence`` - whether to return the sentence from the paragraph with the answer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.2 Building the index and training the reader model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "There are two customizable components in ODQA configs:\n",
     "\n",
     "- TF-IDF ranker;\n",
@@ -281,6 +335,13 @@
     "\n",
     "In addition, to train the Reader on your data, read [here](https://docs.deeppavlov.ai/en/master/features/models/SQuAD.html#4.1-Train-your-model-from-Python)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
