--- a/docs/features/models/entity_extraction.ipynb
+++ b/docs/features/models/entity_extraction.ipynb
@@ -21,15 +21,17 @@
     "\n",
     "4. [Use the model for prediction](#4.-Use-the-model-for-prediction)\n",
     "\n",
-    "    4.1. [Predict using Python](#4.1-Predict-using-Python)\n",
+    "    4.1 [Predict using Python](#4.1-Predict-using-Python)\n",
     "    \n",
-    "    4.2. [Predict using CLI](#4.2-Predict-using-CLI)\n",
+    "    4.2 [Predict using CLI](#4.2-Predict-using-CLI)\n",
     "\n",
     "5. [Customize the model](#5.-Customize-the-model)\n",
     "    \n",
-    "    5.1. [Train your model from Python](#5.1-Train-your-model-from-Python)\n",
+    "    5.1 [Description of config parameters](#5.1-Description-of-config-parameters)\n",
     "    \n",
-    "    5.2. [Train your model from CLI](#5.2-Train-your-model-from-CLI)"
+    "    5.2 [Training entity detection model](#5.2-Training-entity-detection-model)\n",
+    "    \n",
+    "    5.3 [Using custom knowledge base](#5.3-Using-custom-knowledge-base)"
    ]
   },
   {
@@ -165,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For English:"
+    "**For English:**"
    ]
   },
   {
@@ -207,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For Russian:"
+    "**For Russian:**"
    ]
   },
   {
@@ -225,6 +227,13 @@
    "metadata": {},
    "source": [
     "### Entity Linking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**For English:**"
    ]
   },
   {
@@ -275,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For Russian:"
+    "**For Russian:**"
    ]
   },
   {
@@ -305,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For English:"
+    "**For English:**"
    ]
   },
   {
@@ -345,7 +354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For Russian:"
+    "**For Russian:**"
    ]
   },
   {
@@ -393,7 +402,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.1 Training entity detection model"
+    "## 5.1 Description of config parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parameters of ``ner_chunker`` component:\n",
+    "\n",
+    "- ``batch_size: int`` - each text from the input text batch is split into chunks with the length lower than the threshold (because Transformer-based models for entity detection work with limited lengths of the input sequences), than all chunks are concatenated into one list and the list is split into batches of the size ``batch_size``;\n",
+    "- ``max_seq_len: int`` - maximum length of chunk (in wordpiece tokens);\n",
+    "- ``vocab_file: str`` - vocab file of Transformer tokenizer, which is used to tokenize the text for further splitting into chunks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parameters of ``entity_detection_parser`` component:\n",
+    "    \n",
+    "- ``thres_proba: float`` - the NER models return tag confidences for each token; if the probability of \"O\" tag (which is used for tokens not related to entities) for the token is lower than the ``thres_proba``, the tag with the maximum probability from entity tags list is chosen;\n",
+    "- ``o_tag: str`` - tag for non-entity tokens (by default is \"O\" tag);\n",
+    "- ``tags_file: str`` - the filename with the list of tags used in the NER model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parameters of ``ner_chunk_model`` component:\n",
+    "\n",
+    "- ``ner: deeppavlov.core.common.chainer:Chainer`` - the config for entity recognition, which defines entity tags (or \"O\" tag) and tag probabilities for each token in the input text;\n",
+    "- ``ner_parser: deeppavlov.models.entity_extraction.entity_detection_parser:EntityDetectionParser`` - the component which processes the tags and tag probabilities returned by the entity recognition model and defines entity substrings;\n",
+    "- ``ner2: deeppavlov.core.common.chainer:Chainer`` - (optional) an additional entity recognition config, which can improve the quality of entity recognition in the case of joint usage with ``ner`` config;\n",
+    "- ``ner_parser2: deeppavlov.models.entity_extraction.entity_detection_parser:EntityDetectionParser`` - (optional) an additional config for processing entity recognition output."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parameters of ``entity_linker`` component:\n",
+    "\n",
+    "- ``load_path: str`` - the path to the folder with the inverted index;\n",
+    "- ``entity_ranker`` - the component for ranking of candidate entities by descriptions;\n",
+    "- ``entities_database_filename: str`` - file with the inverted index (the mapping between entity titles and entity IDs);\n",
+    "- ``words_dict_filename: str`` - file with mapping of entity titles to the tags of entity detection model;\n",
+    "- ``ngrams_matrix_filename: str`` - matrix of char ngrams of words from entity titles from the knowledge base;\n",
+    "- ``num_entities_for_bert_ranking: int`` - number of candidate entities which are re-ranked by context and description using Transformer-based model;\n",
+    "- ``num_entities_for_conn_ranking: int`` - number of candidate entities which are re-ranked by connections in the knowledge graph between entities for different mentions in the text;\n",
+    "- ``num_entities_to_return: int`` - the number of entity IDs, returned for each entity mention in text; \n",
+    "- ``max_paragraph_len: int`` - maximum length of context used for ranking of entities by description;\n",
+    "- ``lang: str`` - language of the entity linking model (Russian or English);\n",
+    "- ``use_descriptions: bool`` - whether to perform ranking of candidate entities by similarity of their descriptions to the context;\n",
+    "- ``alias_coef: float`` - the coefficient which is multiplied by the substring matching score of the entity if the entity mention in the text matches with the entity title;\n",
+    "- ``use_tags: bool`` - whether to search only those entity IDs in the inverted index, which have the same tag as the entity mention;\n",
+    "- ``lemmatize: bool`` - whether to lemmatize entity mentions before searching candidate entity IDs in the inverted index;\n",
+    "- ``full_paragraph: bool`` - whether to use full context for ranking of entities by descriptions or cut the paragraph to one sentence with entity mention;\n",
+    "- ``use_connections: bool`` - whether to use connections between candidate entities for different mentions for ranking;\n",
+    "- ``kb_filename: str`` - file with the knowledge base in .hdt format;\n",
+    "- ``prefixes: Dict[str, Any]`` - prefixes in the knowledge base for entities and relations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.2 Training entity detection model"
    ]
   },
   {
@@ -407,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.2 Using custom knowledge base"
+    "## 5.3 Using custom knowledge base"
    ]
   },
   {
@@ -416,13 +492,13 @@
    "source": [
     "The database filename is defined with the **entities_database_filename** in entity linking configs. The file is in SQLite format with FTS5 extensions for full-text search of entities by entity mention. The database file should contain the **inverted_index** table with the following columns:\n",
     "\n",
-    "* title - entity title (name or alias) in the knowledge base\n",
-    "* entity_id - entity ID in the knowledge base\n",
-    "* num_rels - number of relations of the entity with other entities in the knowledge graph\n",
-    "* ent_tag - entity tag of the entity detection model (for example, CITY, PERSON, WORK_OF_ART, etc.)\n",
-    "* page - page title of the entity (for Wikidata entities - the Wikipedia page)\n",
-    "* label - entity label in the knowledge base\n",
-    "* descr - entity description in the knowledge base\n",
+    "* ``title`` - entity title (name or alias) in the knowledge base;\n",
+    "* ``entity_id`` - entity ID in the knowledge base;\n",
+    "* ``num_rels`` - number of relations of the entity with other entities in the knowledge graph;\n",
+    "* ``ent_tag`` - entity tag of the entity detection model (for example, CITY, PERSON, WORK_OF_ART, etc.);\n",
+    "* ``page`` - page title of the entity (for Wikidata entities - the Wikipedia page);\n",
+    "* ``label`` - entity label in the knowledge base;\n",
+    "* ``descr`` - entity description in the knowledge base.\n",
     "\n",
     "Tags of entities in the knowledge base should correspond with the tags of the custom NER model or default `ner_ontonotes_bert` or `ner_rus_bert_probas` models. The list of `ner_ontonotes_bert` tags is listed in tags.dict file in ~/.deeppavlov/models/ner_ontonotes_bert_torch_crf directory, the list of `ner_rus_bert_probas tags` - in tags.dict file in ~/.deeppavlov/models/wiki_ner_rus_bert directory."
    ]
