--- a/docs/features/models/relation_extraction.ipynb
+++ b/docs/features/models/relation_extraction.ipynb
@@ -21,15 +21,21 @@
     "\n",
     "4. [Use the model for prediction](#4.-Use-the-model-for-prediction)\n",
     "\n",
-    "    4.1. [Predict using Python](#4.1-Predict-using-Python)\n",
+    "    4.1 [Predict using Python](#4.1-Predict-using-Python)\n",
     "    \n",
-    "    4.2. [Predict using CLI](#4.2-Predict-using-CLI)\n",
+    "    4.2 [Predict using CLI](#4.2-Predict-using-CLI)\n",
     "\n",
     "5. [Customize the model](#5.-Customize-the-model)\n",
     "    \n",
-    "    5.1. [Train your model from Python](#5.1-Train-your-model-from-Python)\n",
+    "    5.1 [Description of config parameters](#5.1-Description-of-config-parameters)\n",
     "    \n",
-    "    5.2. [Train your model from CLI](#5.2-Train-your-model-from-CLI)"
+    "    5.2 [Train Relation Extraction on custom data](#5.2-Train-Relation-Extraction-on-custom-data)\n",
+    "\n",
+    "6. [Relations list](#6.-Relations-list)\n",
+    "\n",
+    "    6.1 [Relations used in English model](#6.1-Relations-used-in-English-model)\n",
+    "    \n",
+    "    6.2 [Relations used in Russian model](#6.2-Relations-used-in-Russian-model)"
    ]
   },
   {
@@ -300,7 +306,7 @@
    "outputs": [],
    "source": [
     "sentence_tokens = [[\"Илон\", \"Маск\", \"живет\", \"в\", \"Сиэттле\", \".\"]]\n",
-    "entity_pos = [[[(0, 2)], [(4, 6)]]]\n",
+    "entity_pos = [[[(0, 2)], [(4, 5)]]]\n",
     "entity_tags = [[\"PERSON\", \"CITY\"]]\n",
     "pred = model(sentence_tokens, entity_pos, entity_tags)"
    ]
@@ -327,14 +333,251 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Relations list"
+    "# 5. Customize the model"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.1 Relations used in English model"
+    "## 5.1 Description of config parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parameters of ``re_preprocessor`` component:\n",
+    "\n",
+    "- ``ner_tags: List[str]`` - ner tags of the entities, which are one-hot encoded and concatenated to entity embeddings in the output of the Transformer;\n",
+    "- ``special_token: str`` - the token which is added before and after the entities (subject and object in the triplet) mentions;\n",
+    "- ``default_tag: str`` - default ner tags, if no tags are provided;\n",
+    "- ``do_lower_case: bool`` - set True if lowercasing is needed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parameters of ``re_classifier`` component:\n",
+    "\n",
+    "- ``n_classes: int`` - number of relations which the model supports;\n",
+    "- ``num_ner_tags: int`` - number of ner tags;\n",
+    "- ``return_probas: bool`` - whether to return confidences of predicted relations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parameters of ``re_postprocessor`` component:\n",
+    "    \n",
+    "- ``rel2id_path: str`` - the file with mapping of relation IDs in the knowledge base to relation number (for example, \"P19\": 24);\n",
+    "- ``rel2label_path: str`` - the file with mapping of relation IDs to relation labels."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.2 Train Relation Extraction on custom data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are two kinds of dataset readers for relation extraction in DeepPavlov library:\n",
+    "\n",
+    "- ``docred_reader``, which takes into account partition of the text into sentences and several mentions in the text for one entity;\n",
+    "- ``rured_reader``, a simplified dataset reader."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train with ``docred_reader``"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You should prepare **train_annotated.json**, **dev.json**, **test.json** in the following format:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    {\n",
+    "      \"vertexSet\": [\n",
+    "        [\n",
+    "          {\n",
+    "            \"name\": entity1_mention1,\n",
+    "            \"pos\": [mention1 start token index, mention1 end token index],\n",
+    "            \"sent_id\": ID of the sentence with the entity1 mention1,\n",
+    "            \"type\": ner tag\n",
+    "          },\n",
+    "          {\n",
+    "            \"name\": entity1_mention2,\n",
+    "            ...\n",
+    "          },\n",
+    "          ...\n",
+    "        ],\n",
+    "        [ ... ]\n",
+    "      ],\n",
+    "      \"labels\": [\n",
+    "        {\n",
+    "          \"r\": relation ID,\n",
+    "          \"h\": index of head entity of the triplet in the vertexSet list,\n",
+    "          \"t\": index of tail entity of the triplet in the vertexSet list,\n",
+    "          \"evidence\": [\n",
+    "            indices of the sentences with the triplet\n",
+    "          ]\n",
+    "        },\n",
+    "        ...\n",
+    "      ],\n",
+    "      \"title\": doc title,\n",
+    "      \"sentences\": [\n",
+    "        list of tokens of sentence 1,\n",
+    "        list of tokens of sentence 2,\n",
+    "        ...\n",
+    "      ],\n",
+    "      ...\n",
+    "    }  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For example,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    {\n",
+    "      \"vertexSet\": [\n",
+    "        [\n",
+    "          {\n",
+    "            \"name\": \"Elon Musk\",\n",
+    "            \"pos\": [0, 2],\n",
+    "            \"sent_id\": 0,\n",
+    "            \"type\": \"PER\"\n",
+    "          }\n",
+    "        ],\n",
+    "        [\n",
+    "          {\n",
+    "            \"name\": \"Seattle\",\n",
+    "            \"pos\": [4, 5],\n",
+    "            \"sent_id\": 0,\n",
+    "            \"type\": \"CITY\"\n",
+    "          }\n",
+    "        ]\n",
+    "      ],\n",
+    "      \"labels\": [\n",
+    "        {\n",
+    "          \"r\": \"P551\",\n",
+    "          \"h\": 0,\n",
+    "          \"t\": 1,\n",
+    "          \"evidence\": [0]\n",
+    "        }\n",
+    "      ],\n",
+    "      \"title\": \"title1\",\n",
+    "      \"sentences\": [\n",
+    "        [\"Elon\", \"Musk\", \"lives\", \"in\", \"Seattle\", \".\"]\n",
+    "      ]\n",
+    "    }  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train with  ``rured_reader``"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You should prepare **train.json**, **dev.json**, **test.json** in the following format:\n",
+    "\n",
+    "    {\n",
+    "        \"token\": list of text tokens,\n",
+    "        \"relation\": relation ID,\n",
+    "        \"subj_start\": index of the token of the subject start in the list,\n",
+    "        \"subj_end\": index of the token of the subject end in the list,\n",
+    "        \"obj_start\": index of the token of the object start in the list,\n",
+    "        \"obj_end\": index of the token of the object end in the list,\n",
+    "        \"subj_type\": ner tag of the subject entity,\n",
+    "        \"obj_type\": ner tag of the object entity,\n",
+    "    },\n",
+    "\n",
+    "for example:\n",
+    "\n",
+    "    {\n",
+    "        \"token\": [\"Илон\", \"Маск\", \"живет\", \"в\", \"Сиэттле\", \".\"],\n",
+    "        \"relation\": \"P551\",\n",
+    "        \"subj_start\": 0,\n",
+    "        \"subj_end\": 2,\n",
+    "        \"obj_start\": 4,\n",
+    "        \"obj_end\": 5,\n",
+    "        \"subj_type\": \"PERSON\",\n",
+    "        \"obj_type\": \"CITY\"\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Train the model using Python:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from deeppavlov import train_model\n",
+    "\n",
+    "train_model(\"re_docred\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**or using CLI:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! python -m deeppavlov train re_docred"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Relations list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.1 Relations used in English model"
    ]
   },
   {
@@ -445,7 +688,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.2 Relations used in Russian model"
+    "## 6.2 Relations used in Russian model"
    ]
   },
   {
