--- a/docs/features/models/neural_ranking.ipynb
+++ b/docs/features/models/neural_ranking.ipynb
@@ -257,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### English"
+    "## English"
    ]
   },
   {
@@ -293,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Russian"
+    "## Russian"
    ]
   },
   {
@@ -350,13 +350,6 @@
    "source": [
     "python -m deeppavlov train paraphraser_rubert"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
