--- a/docs/features/models/relation_extraction.ipynb
+++ b/docs/features/models/relation_extraction.ipynb
@@ -257,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The whole list of 6 English NER tags"
+    "**The whole list of 6 English NER tags**"
    ]
   },
   {
