--- a/docs/features/models/KBQA.ipynb
+++ b/docs/features/models/KBQA.ipynb
@@ -234,7 +234,7 @@
    "source": [
     "from deeppavlov import configs, build_model\n",
     "\n",
-    "kbqa = build_model(configs.kbqa.kbqa_cq_en, download=True)"
+    "kbqa = build_model('kbqa_cq_en', download=True, install=True)"
    ]
   },
   {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -262,21 +262,23 @@
     {
      "data": {
       "text/plain": [
-       "['Libya']"
+       "[['Robert Zemeckis'],\n",
+       " [['Q187364']],\n",
+       " [['SELECT ?answer WHERE { wd:Q134773 wdt:P57 ?answer. }']]]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kbqa(['What is in the village of Negev that has diplomatic relations with the Czech Republic?'])"
+    "kbqa(['Who directed Forrest Gump?'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -288,21 +290,23 @@
     {
      "data": {
       "text/plain": [
-       "['chess']"
+       "[['United States senator'],\n",
+       " [['Q4416090']],\n",
+       " [['SELECT ?answer WHERE { wd:Q11613 p:P39 ?ent . ?ent ps:P39 ?answer . ?ent ?p ?x filter(contains(?x, n)). }']]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kbqa(['Magnus Carlsen is a part of what sport?'])"
+    "kbqa(['What position was held by Harry S. Truman on 1/3/1935?'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -310,9 +314,22 @@
     "id": "yz63pzId2XFq",
     "outputId": "f23128ef-ebc4-40b8-d064-c6c7289c635a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['FC Barcelona B, Argentina national under-20 football team'],\n",
+       " [['Q10467', 'Q1187790']],\n",
+       " [['SELECT ?answer WHERE { wd:Q615 p:P54 ?ent . ?ent ps:P54 ?answer . ?ent ?p ?x filter(contains(?x, n)). }']]]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "kbqa(['What is crew member Yuri Gagarin’s Vostok?'])"
+    "kbqa(['What teams did Lionel Messi play for in 2004?'])"
    ]
   },
   {
@@ -334,12 +351,12 @@
    "source": [
     "from deeppavlov import configs, build_model\n",
     "\n",
-    "kbqa = build_model(configs.kbqa.kbqa_cq_ru, download=True)"
+    "kbqa = build_model('kbqa_cq_ru', download=True, install=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -347,7 +364,20 @@
     "id": "zHhEL4zmtyA2",
     "outputId": "12c43b93-81cb-4ea2-c534-2e2bc337df50"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['26 мая 1799, 06 июня 1799'],\n",
+       " [['+1799-05-26^^T', '+1799-06-06^^T']],\n",
+       " [['SELECT ?answer WHERE { wd:Q7200 wdt:P569 ?answer. }']]]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "kbqa(['Когда родился Пушкин?'])"
    ]
