--- a/docs/features/models/morpho_tagger.ipynb
+++ b/docs/features/models/morpho_tagger.ipynb
@@ -160,9 +160,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\tЯ\tя\tPRON\t_\tCase=Nom|Number=Sing|Person=1\t_\t_\t_\t_\n",
+      "2\tшёл\tшёл\tVERB\t_\tAspect=Imp|Gender=Masc|Mood=Ind|Number=Sing|Tense=Past|VerbForm=Fin|Voice=Act\t_\t_\t_\t_\n",
+      "3\tдомой\tдомой\tADV\t_\tDegree=Pos\t_\t_\t_\t_\n",
+      "4\tпо\tпо\tADP\t_\t_\t_\t_\t_\t_\n",
+      "5\tнезнакомой\tнезнакомый\tADJ\t_\tCase=Dat|Degree=Pos|Gender=Fem|Number=Sing\t_\t_\t_\t_\n",
+      "6\tулице\tулица\tNOUN\t_\tAnimacy=Inan|Case=Dat|Gender=Fem|Number=Sing\t_\t_\t_\t_\n",
+      "7\t.\t.\tPUNCT\t_\t_\t_\t_\t_\t_\n",
+      "\n",
+      "1\tДевушка\tдевушка\tNOUN\t_\tAnimacy=Anim|Case=Nom|Gender=Fem|Number=Sing\t_\t_\t_\t_\n",
+      "2\tпела\tпеть\tVERB\t_\tAspect=Imp|Gender=Fem|Mood=Ind|Number=Sing|Tense=Past|VerbForm=Fin|Voice=Act\t_\t_\t_\t_\n",
+      "3\tв\tв\tADP\t_\t_\t_\t_\t_\t_\n",
+      "4\tцерковном\tцерковном\tADJ\t_\tCase=Loc|Degree=Pos|Gender=Masc|Number=Sing\t_\t_\t_\t_\n",
+      "5\tхоре\tхор\tNOUN\t_\tAnimacy=Inan|Case=Loc|Gender=Masc|Number=Sing\t_\t_\t_\t_\n",
+      "6\tо\tо\tADP\t_\t_\t_\t_\t_\t_\n",
+      "7\tвсех\tвесь\tDET\t_\tCase=Loc|Number=Plur\t_\t_\t_\t_\n",
+      "8\tуставших\tустать\tVERB\t_\tAspect=Perf|Case=Loc|Number=Plur|Tense=Past|VerbForm=Part|Voice=Act\t_\t_\t_\t_\n",
+      "9\tв\tв\tADP\t_\t_\t_\t_\t_\t_\n",
+      "10\tчужом\tчужом\tADJ\t_\tCase=Loc|Degree=Pos|Gender=Masc|Number=Sing\t_\t_\t_\t_\n",
+      "11\tкраю\tкрай\tNOUN\t_\tAnimacy=Inan|Case=Loc|Gender=Masc|Number=Sing\t_\t_\t_\t_\n",
+      "12\t.\t.\tPUNCT\t_\t_\t_\t_\t_\t_\n"
+     ]
+    }
+   ],
    "source": [
     "sentences = [\"Я шёл домой по незнакомой улице.\", \"Девушка пела в церковном хоре о всех уставших в чужом краю.\"]\n",
     "for parse in model(sentences):\n",
