--- a/docs/features/models/ODQA.ipynb
+++ b/docs/features/models/ODQA.ipynb
@@ -201,9 +201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Luke Skywalker'], [4.196979999542236]]\n"
+     ]
+    }
+   ],
    "source": [
     "odqa_en([\"What is the name of Darth Vader's son?\"])"
    ]
@@ -228,9 +236,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['на востоке и юге Австралии'], [0.9999760985374451]]\n"
+     ]
+    }
+   ],
    "source": [
     "odqa_ru([\"Где живут кенгуру?\"])"
    ]
