--- a/docs/features/models/relation_extraction.ipynb
+++ b/docs/features/models/relation_extraction.ipynb
@@ -220,14 +220,22 @@
    "source": [
     "from deeppavlov import configs, build_model\n",
     "\n",
-    "re = build_model(configs.relation_extraction.re_docred, download=False)"
+    "re_model = build_model(configs.relation_extraction.re_docred, download=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['P26'], ['spouse']]\n"
+     ]
+    }
+   ],
    "source": [
     "sentence_tokens = [[\"Barack\", \"Obama\", \"is\", \"married\", \"to\", \"Michelle\", \"Obama\", \",\", \"born\", \"Michelle\", \"Robinson\", \".\"]]\n",
     "entity_pos = [[[(0, 2)], [(5, 7), (9, 11)]]]\n",
@@ -296,19 +304,27 @@
    "source": [
     "from deeppavlov import configs, build_model\n",
     "\n",
-    "model = build_model(configs.relation_extraction.re_rured)"
+    "re_model = build_model(configs.relation_extraction.re_rured)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['P495'], ['страна происхождения']]\n"
+     ]
+    }
+   ],
    "source": [
     "sentence_tokens = [[\"Илон\", \"Маск\", \"живет\", \"в\", \"Сиэттле\", \".\"]]\n",
     "entity_pos = [[[(0, 2)], [(4, 5)]]]\n",
     "entity_tags = [[\"PERSON\", \"CITY\"]]\n",
-    "pred = model(sentence_tokens, entity_pos, entity_tags)"
+    "pred = re_model(sentence_tokens, entity_pos, entity_tags)"
    ]
   },
   {
