--- a/docs/features/models/syntax_parser.ipynb
+++ b/docs/features/models/syntax_parser.ipynb
@@ -215,9 +215,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\tЯ\t_\t_\t_\t_\t2\tnsubj\t_\t_\n",
+      "2\tшёл\t_\t_\t_\t_\t0\troot\t_\t_\n",
+      "3\tдомой\t_\t_\t_\t_\t2\tadvmod\t_\t_\n",
+      "4\tпо\t_\t_\t_\t_\t6\tcase\t_\t_\n",
+      "5\tнезнакомой\t_\t_\t_\t_\t6\tamod\t_\t_\n",
+      "6\tулице\t_\t_\t_\t_\t2\tobl\t_\t_\n",
+      "7\t.\t_\t_\t_\t_\t2\tpunct\t_\t_\n",
+      "\n",
+      "1\tДевушка\t_\t_\t_\t_\t2\tnsubj\t_\t_\n",
+      "2\tпела\t_\t_\t_\t_\t0\troot\t_\t_\n",
+      "3\tв\t_\t_\t_\t_\t5\tcase\t_\t_\n",
+      "4\tцерковном\t_\t_\t_\t_\t5\tamod\t_\t_\n",
+      "5\tхоре\t_\t_\t_\t_\t2\tobl\t_\t_\n",
+      "6\t.\t_\t_\t_\t_\t2\tpunct\t_\t_\n"
+     ]
+    }
+   ],
    "source": [
     "sentences = [\"Я шёл домой по незнакомой улице.\", \"Девушка пела в церковном хоре.\"]\n",
     "for parse in model(sentences):\n",
@@ -260,9 +281,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\tЯ\tя\tPRON\t_\tCase=Nom|Number=Sing|Person=1\t2\tnsubj\t_\t_\n",
+      "2\tшёл\tшёл\tVERB\t_\tAspect=Imp|Gender=Masc|Mood=Ind|Number=Sing|Tense=Past|VerbForm=Fin|Voice=Act\t0\troot\t_\t_\n",
+      "3\tдомой\tдомой\tADV\t_\tDegree=Pos\t2\tadvmod\t_\t_\n",
+      "4\tпо\tпо\tADP\t_\t_\t6\tcase\t_\t_\n",
+      "5\tнезнакомой\tнезнакомый\tADJ\t_\tCase=Dat|Degree=Pos|Gender=Fem|Number=Sing\t6\tamod\t_\t_\n",
+      "6\tулице\tулица\tNOUN\t_\tAnimacy=Inan|Case=Dat|Gender=Fem|Number=Sing\t2\tobl\t_\t_\n",
+      "7\t.\t.\tPUNCT\t_\t_\t2\tpunct\t_\t_\n",
+      "1\tДевушка\tдевушка\tNOUN\t_\tAnimacy=Anim|Case=Nom|Gender=Fem|Number=Sing\t2\tnsubj\t_\t_\n",
+      "2\tпела\tпеть\tVERB\t_\tAspect=Imp|Gender=Fem|Mood=Ind|Number=Sing|Tense=Past|VerbForm=Fin|Voice=Act\t0\troot\t_\t_\n",
+      "3\tв\tв\tADP\t_\t_\t5\tcase\t_\t_\n",
+      "4\tцерковном\tцерковном\tADJ\t_\tCase=Loc|Degree=Pos|Gender=Masc|Number=Sing\t5\tamod\t_\t_\n",
+      "5\tхоре\tхор\tNOUN\t_\tAnimacy=Inan|Case=Loc|Gender=Masc|Number=Sing\t2\tobl\t_\t_\n",
+      "6\t.\t.\tPUNCT\t_\t_\t2\tpunct\t_\t_\n"
+     ]
+    }
+   ],
    "source": [
     "sentences = [\"Я шёл домой по незнакомой улице.\", \"Девушка пела в церковном хоре.\"]\n",
     "for parse in model(sentences):\n",
