--- a/docs/features/models/tfidf_ranking.ipynb
+++ b/docs/features/models/tfidf_ranking.ipynb
@@ -164,12 +164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[18155097, 628663, 17123727, 628662, 19097375]\n"
+     ]
+    }
+   ],
    "source": [
     "result = ranker(['Who is Ivan Pavlov?'])\n",
-    "print(result[:5])"
+    "print(result[0][:5])"
    ]
   },
   {
@@ -192,12 +200,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4902620, 1900377, 11129584, 1720563, 1720658]\n"
+     ]
+    }
+   ],
    "source": [
     "result = ranker(['Когда произошла Куликовская битва?'])\n",
-    "print(result[:5])"
+    "print(result[0][:5])"
    ]
   },
   {
